--- a/ptitbiomed-ui/src/app/layouts/navbar/navbar-content/navbar-content.component.css
+++ b/ptitbiomed-ui/src/app/layouts/navbar/navbar-content/navbar-content.component.css
@@ -36,6 +36,12 @@ a {
   display: block;
 }
 
+.hidden {
+  border: 2px dotted black;
+  background-color: #eee;
+  color: #555;
+}
+
 .dropdown-content {
   display: none;
   position: absolute;
